# tinyos-main-1

./: README.breakfast.txt
apps/: README.txt
apps/BaseStation/: BaseStationP.nc  Makefile  README.txt
apps/Blink/: README.txt  nslu10.bacon
apps/Null/: NullC.nc
apps/breakfast/: README.txt  minserial.py  notes.txt
apps/breakfast/Sensorbed/: README  all  labels.txt  sp-local-async.py  sp-remote-async.py
apps/breakfast/bacon/: README.txt  genBinaries.sh
apps/breakfast/bacon/Leaf/: DummyLogWriteC.nc  LeafAppC.nc  LeafP.nc  Makefile  Makefile.am  Makefile.cx  Makefile.cxl  Makefile.dummycxl  Makefile.printf  Makefile.testbed  README.txt  burn  leaf.h
apps/breakfast/bacon/Leaf/DummyToastSampler/: DummyToastP.nc  ToastSamplerC.nc
apps/breakfast/logic-cli/: Makefile  README.txt  convert.py
apps/breakfast/tools/: higherApi.py  notes.txt  sensorgui.py
apps/breakfast/util/: BreakfastDebug.h  TaskResource.nc  decodeError.h  fixedPointUtils.h  stateSafety.h
apps/util/DualUartEcho/: PlatformSerial0C.nc  README.txt  TelosSerial0P.nc  UartEchoC.nc  UartEchoP.nc
support/: README.txt
support/make/: README.breakfast.txt  bacon.target  bacon2.target  baconxl.extra
support/make/msp/: msp.rules
tools/: README.breakfast.txt
tos/: README.txt
tos/chips/: README.txt
tos/chips/apds9007/: Apds9007C.nc  Apds9007InitC.nc  Apds9007InitP.nc  Apds9007P.nc
tos/chips/cc1190/: CC1190.nc  CC1190C.nc  CC1190P.nc
tos/chips/cc430/: CC430CRCC.nc  Crc.nc  WatchDogC.nc  WatchDogP.nc
tos/chips/mcp9700/: Mcp9700C.nc
tos/lib/rf1a-cx/: CX.h  (+8 more)
tos/system/: SchedulerBasicP.nc
(+2342 files in other folders)
